# tbt-sys

./: .gitignore  README.md  core.py  core_test.py  db.py  main.py  pyproject.toml  server.py  tbt_config.py  utils.py
templates/: game_result.html  game_scoring.html  groups.html  homepage.html  new_match.html  new_match_result.html  ranking.html  register.html  register_result.html  schedules.html
tools/: backup_data.py  display_data.py  gen_player_by_group_rank.py  gen_test_rank.py
